force-app/main/default/objects/Relationship__c/Relationship__c.object-meta.xml
<CustomObject>
    <description>This junction object links Client with Partner Accounts, Partner Accounts with Client Opportunities, Client Accounts with Competitor Accounts, and Competitor Accounts with Client Opportunities.</description>
    <label>Relationship</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>