force-app/main/default/objects/Relationship__c/fields/Account_Data_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Account_Data_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Data Partnership</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Account Data Partnership</relationshipLabel>
    <relationshipName>Account_Data_Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>