force-app/main/default/objects/Relationship__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(
 AND( 
  TODAY() &gt;= Start_Date__c, 
  OR(
   TODAY() &lt;= End_Date__c, 
   ISBLANK(End_Date__c)
  ),
  OR(
   !ISBLANK( Partner_Oppty_Partnership__c ),   
   !ISBLANK( Partner_Partnership__c ),
   !ISBLANK( Partner_Contract_Partnership__c ),
   !ISBLANK( Account_Data_Partnership__c )
  )
 ),
 TRUE,
 FALSE
)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>