force-app/main/default/objects/Relationship__c/fields/Box_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_Link__c</fullName>
    <description>Link of the Box folder where the file is located</description>
    <inlineHelpText>Link of the Box folder where the file is located</inlineHelpText>
    <label>Box Folder Link</label>
    <type>Url</type>
</CustomField>