force-app/main/default/objects/Relationship__c/fields/Client_Competition__c.field-meta.xml
<CustomField>
    <fullName>Client_Competition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Client Account for linking to a Competitor Account.</description>
    <inlineHelpText>Lookup to Client Account for linking to a Competitor Account.</inlineHelpText>
    <label>Client Account (C)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Client-Level Competition</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>