force-app/main/default/objects/Relationship__c/fields/Client_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Client_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Client Account for linking to a Partner Account.</description>
    <inlineHelpText>Lookup to a Client Account for linking to a Partner Account.</inlineHelpText>
    <label>Client Account (P)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Client-Level Partnerships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>