force-app/main/default/objects/Relationship__c/fields/CohortOpportunity__c.field-meta.xml
<CustomField>
    <fullName>CohortOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a Client Lite Account that is a part of a Cohort with a Partner&apos;s Cohort Opportunity</description>
    <inlineHelpText>Links a Client Lite Account that is a part of a Cohort with a Partner&apos;s Cohort Opportunity</inlineHelpText>
    <label>Cohort Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Cohort Clients</relationshipLabel>
    <relationshipName>CohortClients</relationshipName>
    <type>Lookup</type>
</CustomField>