force-app/main/default/objects/Relationship__c/fields/Competing_Product__c.field-meta.xml
<CustomField>
    <fullName>Competing_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the product with which the Competitor Account is competing</description>
    <inlineHelpText>Defines the product with which the Competitor Account is competing</inlineHelpText>
    <label>Competing Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Competing Products</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>