force-app/main/default/objects/Relationship__c/fields/Competitor_Competition__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Competition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Competitor Account for linking to a Client Account.</description>
    <inlineHelpText>Lookup to Competitor Account for linking to a Client Account.</inlineHelpText>
    <label>Competitor Account (A)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Client-Level Competition (Competitor)</relationshipLabel>
    <relationshipName>Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>