force-app/main/default/objects/Relationship__c/fields/Competitor_Oppty_Competition__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Oppty_Competition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Competitor Account for linking to an Opportunity.</description>
    <inlineHelpText>Lookup to Competitor Account for linking to an Opportunity.</inlineHelpText>
    <label>Competitor Account (O)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Opportunity-Level Competition (Competitor)</relationshipLabel>
    <relationshipName>Relationships3</relationshipName>
    <type>Lookup</type>
</CustomField>