force-app/main/default/objects/Relationship__c/fields/Contract_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Contract_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Contract in a relationship between a deal and Partner.</description>
    <inlineHelpText>The related Contract in a relationship between a deal and Partner.</inlineHelpText>
    <label>Contract (P)</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract-Level Partnerships (Contract)</relationshipLabel>
    <relationshipName>ContractRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>