force-app/main/default/objects/Relationship__c/fields/Data_Grade__c.field-meta.xml
<CustomField>
    <fullName>Data_Grade__c</fullName>
    <description>Data Operations assigned grading based on quality of data received</description>
    <inlineHelpText>Data Operations assigned grading based on quality of data received</inlineHelpText>
    <label>Data Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>A-</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>B-</fullName>
            </value>
            <value>
                <fullName>C+</fullName>
            </value>
            <value>
                <fullName>C-</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>