force-app/main/default/objects/Relationship__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>Type of medical or insurance information we’re receiving through this file</description>
    <inlineHelpText>Type of medical or insurance information we’re receiving through this file</inlineHelpText>
    <label>Data Types Included</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Info</fullName>
            </value>
            <value>
                <fullName>Medical Claims</fullName>
            </value>
            <value>
                <fullName>Pharmacy Claims</fullName>
            </value>
            <value>
                <fullName>Eligibility</fullName>
            </value>
            <value>
                <fullName>Predefined List</fullName>
            </value>
            <value>
                <fullName>Tags</fullName>
            </value>
            <value>
                <fullName>Condition List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>