force-app/main/default/objects/Relationship__c/fields/Delivery_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Frequency__c</fullName>
    <description>Frequency in which we are receiving the files</description>
    <inlineHelpText>Frequency in which we are receiving the files</inlineHelpText>
    <label>Delivery Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Irregular</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Bimonthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>