force-app/main/default/objects/Relationship__c/fields/Drivertized__c.field-meta.xml
<CustomField>
    <fullName>Drivertized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this feed is drivertized</description>
    <inlineHelpText>Indicates if this feed is drivertized</inlineHelpText>
    <label>Drivertized</label>
    <type>Checkbox</type>
</CustomField>