force-app/main/default/objects/Relationship__c/fields/Eligibility_Source__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this file is the main source of eligibility</description>
    <inlineHelpText>Indicates if this file is the main source of eligibility</inlineHelpText>
    <label>Eligibility Source</label>
    <type>Checkbox</type>
</CustomField>