force-app/main/default/objects/Relationship__c/fields/File_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>File_Delivery_Address__c</fullName>
    <description>Email address or link associated with the file delivery</description>
    <inlineHelpText>Email address or link associated with the file delivery</inlineHelpText>
    <label>File Delivery Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>