force-app/main/default/objects/Relationship__c/fields/File_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>File_Delivery_Method__c</fullName>
    <description>Method used to send the file to our systems</description>
    <inlineHelpText>Method used to send the file to our systems</inlineHelpText>
    <label>File Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFTP - Livongo Hosted</fullName>
            </value>
            <value>
                <fullName>SFTP - Client Hosted</fullName>
            </value>
            <value>
                <fullName>Secure Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>