force-app/main/default/objects/Relationship__c/fields/File_Format__c.field-meta.xml
<CustomField>
    <fullName>File_Format__c</fullName>
    <description>Format in which we are receiving this file</description>
    <inlineHelpText>Format in which we are receiving this file</inlineHelpText>
    <label>File Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delimited</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Fixed Width</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>