force-app/main/default/objects/Relationship__c/fields/File_Naming_Convention__c.field-meta.xml
<CustomField>
    <fullName>File_Naming_Convention__c</fullName>
    <description>File name prefix being used when sending the file</description>
    <inlineHelpText>File name prefix being used when sending the file</inlineHelpText>
    <label>File Naming Convention</label>
    <type>TextArea</type>
</CustomField>