force-app/main/default/objects/Relationship__c/fields/Historical_Received__c.field-meta.xml
<CustomField>
    <fullName>Historical_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if we receive historical data for this feed</description>
    <inlineHelpText>Indicates if we receive historical data for this feed</inlineHelpText>
    <label>Historical Received</label>
    <type>Checkbox</type>
</CustomField>