force-app/main/default/objects/Relationship__c/fields/Master_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to either a Partner or Competitor Account for linking to a Client Account.</description>
    <inlineHelpText>Lookup to either a Partner or Competitor Account for linking to a Client Account.</inlineHelpText>
    <label>Master Vendor Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Master Vendor Accounts</relationshipLabel>
    <relationshipName>PartnerAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>