force-app/main/default/objects/Relationship__c/fields/Master_Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Client_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the master account for the Relates To record</description>
    <label>Master Client Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Master Client Accounts</relationshipLabel>
    <relationshipName>MasterAccount</relationshipName>
    <type>Lookup</type>
</CustomField>