force-app/main/default/objects/Relationship__c/fields/Master_Client_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Client_Account_Name__c</fullName>
    <formula>Master_Client_Account__r.Name</formula>
    <label>Master Client Account Name</label>
    <type>Text</type>
</CustomField>