force-app/main/default/objects/Relationship__c/fields/Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the master contract for the Relates To record</description>
    <inlineHelpText>Defines the master contract for the Relates To record</inlineHelpText>
    <label>Master Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Master Contracts</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>