force-app/main/default/objects/Relationship__c/fields/Master_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Master_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the master opportunity for the Relates To record</description>
    <label>Master Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Master Opportunities</relationshipLabel>
    <relationshipName>Relates_To</relationshipName>
    <type>Lookup</type>
</CustomField>