force-app/main/default/objects/Relationship__c/fields/Multi_tenant__c.field-meta.xml
<CustomField>
    <fullName>Multi_tenant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is part of a multitenant file</description>
    <inlineHelpText>Indicates if this is part of a multitenant file</inlineHelpText>
    <label>Multi-tenant</label>
    <type>Checkbox</type>
</CustomField>