force-app/main/default/objects/Relationship__c/fields/Opportunity_CO__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_CO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Cohorts Only!  Lookup to Opportunity for linking to a Client Lite that is a part of a Cohort related to this Opportunity.</description>
    <inlineHelpText>For Cohorts Only!  Lookup to Opportunity for linking to a Client Lite that is a part of a Cohort related to this Opportunity.</inlineHelpText>
    <label>Opportunity (Cohort)</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity to Cohorts</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>