force-app/main/default/objects/Relationship__c/fields/Opportunity_Competition__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Competition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity for linking to a Competitor Account.</description>
    <inlineHelpText>Lookup to Opportunity for linking to a Competitor Account.</inlineHelpText>
    <label>Opportunity (C)</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity-Level Competition (Opportunity)</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>