force-app/main/default/objects/Relationship__c/fields/Opportunity_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity in a relationship between an Opportunity and Partner Account.</description>
    <inlineHelpText>The Opportunity in a relationship between an Opportunity and Partner Account.</inlineHelpText>
    <label>Opportunity (P)</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity-Level Partnerships (Opportunity)</relationshipLabel>
    <relationshipName>PartnerAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>