force-app/main/default/objects/Relationship__c/fields/Partner_Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Text__c</fullName>
    <formula>Master_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account</label>
    <type>Text</type>
</CustomField>