force-app/main/default/objects/Relationship__c/fields/Partner_Contract_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contract_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Partner Account for linking a Partner Account to a Contract.</description>
    <inlineHelpText>Lookup to a Partner Account for linking a Partner Account to a Contract.</inlineHelpText>
    <label>Partner Account (C)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Contract-Level Partnership (Partner)</relationshipLabel>
    <relationshipName>Relationships4</relationshipName>
    <type>Lookup</type>
</CustomField>