force-app/main/default/objects/Relationship__c/fields/Partner_Oppty_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partner_Oppty_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Partner Account for linking a Partner Account to an Opportunity.</description>
    <inlineHelpText>Lookup to a Partner Account for linking a Partner Account to an Opportunity.</inlineHelpText>
    <label>Partner Account (O)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Opportunity-Level Partnership (Partner)</relationshipLabel>
    <relationshipName>PARTNERTOOPPORTUNITY</relationshipName>
    <type>Lookup</type>
</CustomField>