force-app/main/default/objects/Relationship__c/fields/Partner_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partner_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Partner or Employer Account in a relationship between a Client and Partner or Employer Account.</description>
    <inlineHelpText>The Partner or Employer Account in a relationship between a Client and Partner or Employer Account.</inlineHelpText>
    <label>Partner Account (A)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Client-Level Partnerships (Partner)</relationshipLabel>
    <relationshipName>RelatedAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>