force-app/main/default/objects/Relationship__c/fields/Partner_Partnership_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Partnership_Name__c</fullName>
    <formula>Partner_Partnership__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account (A) Name</label>
    <type>Text</type>
</CustomField>