force-app/main/default/objects/Relationship__c/fields/Relationship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Notes__c</fullName>
    <description>add notes to account partner</description>
    <label>Relationship Notes</label>
    <type>TextArea</type>
</CustomField>