force-app/main/default/objects/Relationship__c/fields/Relationship_Sort__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Sort__c</fullName>
    <description>Allows for sorting &quot;key&quot; relationships to the top of related lists</description>
    <formula>IF( ISPICKVAL(RelationshipType__c, &quot;Contract Path&quot;), 1, 
IF( ISPICKVAL(RelationshipType__c, &quot;Billing Partner&quot;), 3, 
IF( ISPICKVAL(RelationshipType__c, &quot;Eligibility Partner&quot;), 2, 
4)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>