force-app/main/default/objects/Relationship__c/fields/RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>RelationshipType__c</fullName>
    <description>Defines the type of relationship between two entities.</description>
    <inlineHelpText>Defines the type of relationship between two entities.</inlineHelpText>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activity Tracking Devices</fullName>
            </value>
            <value>
                <fullName>Associated Health Plan</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Benefits Consultant</fullName>
            </value>
            <value>
                <fullName>Billing Partner</fullName>
            </value>
            <value>
                <fullName>Biometrics Screening/Health  Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Health</fullName>
            </value>
            <value>
                <fullName>Care Coordinator</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Health and Obesity</fullName>
            </value>
            <value>
                <fullName>Cohort</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Concierge/Coaching Advocacy</fullName>
            </value>
            <value>
                <fullName>Contract Path</fullName>
            </value>
            <value>
                <fullName>Contract Terms</fullName>
            </value>
            <value>
                <fullName>Cost Transparency</fullName>
            </value>
            <value>
                <fullName>Data – Condition List</fullName>
            </value>
            <value>
                <fullName>Data - Eligibility File</fullName>
            </value>
            <value>
                <fullName>Data - Email</fullName>
            </value>
            <value>
                <fullName>Data - Medical Claims</fullName>
            </value>
            <value>
                <fullName>Data - N/A – No Livongo Marketing</fullName>
            </value>
            <value>
                <fullName>Data - Other</fullName>
            </value>
            <value>
                <fullName>Data - Pharmacy Claims</fullName>
            </value>
            <value>
                <fullName>Data - Predefined List from Biometric</fullName>
            </value>
            <value>
                <fullName>Data - Predefined List from EMR</fullName>
            </value>
            <value>
                <fullName>Data - Predefined List from HRA</fullName>
            </value>
            <value>
                <fullName>Data - Predefined List from Medical Claims</fullName>
            </value>
            <value>
                <fullName>Data - Predefined List from Pharmacy Claims</fullName>
            </value>
            <value>
                <fullName>Data Warehouse</fullName>
            </value>
            <value>
                <fullName>Dental Services Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>