force-app/main/default/objects/Relationship__c/fields/ReportRecipient__c.field-meta.xml
<CustomField>
    <fullName>ReportRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Party to which reports may be sent.</description>
    <inlineHelpText>Party to which reports may be sent.</inlineHelpText>
    <label>Report Recipient</label>
    <type>Checkbox</type>
</CustomField>