force-app/main/default/objects/Relationship__c/fields/ROI_Ready__c.field-meta.xml
<CustomField>
    <fullName>ROI_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this feed is in line with ROI standards</description>
    <inlineHelpText>Indicates if this feed is in line with ROI standards</inlineHelpText>
    <label>ROI Ready</label>
    <type>Checkbox</type>
</CustomField>