force-app/main/default/objects/Relationship__c/fields/Used_for_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Used_for_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this file is being used for marketing</description>
    <inlineHelpText>Indicates if this file is being used for marketing</inlineHelpText>
    <label>Used for Marketing</label>
    <type>Checkbox</type>
</CustomField>