force-app/main/default/objects/Relationship__c/recordTypes/Account_Competition.recordType-meta.xml
<RecordType>
    <fullName>Account_Competition</fullName>
    <active>true</active>
    <description>Competitor at the Client Account level</description>
    <label>Account Competition</label>
</RecordType>