force-app/main/default/objects/Relationship__c/recordTypes/Account_Data_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Account_Data_Partnership</fullName>
    <active>true</active>
    <description>Account Data Partnership</description>
    <label>Account Data Partnership (Data Operations Only)</label>
</RecordType>