force-app/main/default/objects/Relationship__c/recordTypes/Account_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Account_Partnership</fullName>
    <active>true</active>
    <description>Partner at the Client Account level (Health Plan/Payer, Benefits Consultant, PBM, Wellness Coordinator, or Cohort)</description>
    <label>Account Partnership</label>
</RecordType>