force-app/main/default/objects/Relationship__c/recordTypes/Contract_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Contract_Partnership</fullName>
    <active>true</active>
    <description>Partner at the Contract level (Admin Party, Billing Partner, Care Coordinator, Contract Path, Contract Terms, or Data)</description>
    <label>Contract Partnership</label>
</RecordType>