force-app/main/default/objects/Relationship__c/recordTypes/Opportunity_Competition.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Competition</fullName>
    <active>true</active>
    <description>Competitor at the Opportunity level</description>
    <label>Opportunity Competition</label>
</RecordType>