force-app/main/default/objects/Relationship__c/recordTypes/Opportunity_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Partnership</fullName>
    <active>true</active>
    <description>Partner at the Opportunity level (Lead Source or Influencer)</description>
    <label>Opportunity Partnership</label>
</RecordType>