force-app/main/default/objects/Relationship__c/validationRules/Billing_CVS_Caremark.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_CVS_Caremark</fullName>
    <active>true</active>
    <description>We noticed that you selected CVS Health or Caremark as the Billing Partner.  Please select Caremark TC or Caremark PSM instead.</description>
    <errorConditionFormula>$Setup.LVGO_Automation_Switch__c.Validations__c &amp;&amp;
( Partner_Contract_Partnership__r.Account_ID_Long__c =  $CustomMetadata.Account_Long_ID__mdt.CVS_Health.Account_Long_ID__c 
	|| Partner_Contract_Partnership__r.Account_ID_Long__c =  $CustomMetadata.Account_Long_ID__mdt.Caremark.Account_Long_ID__c )
	&amp;&amp;  ISPICKVAL( RelationshipType__c , &quot;Billing Partner&quot;)</errorConditionFormula>
    <errorMessage>We noticed that you selected CVS Health or Caremark as the Billing Partner.  Please select Caremark TC or Caremark PSM instead.</errorMessage>
</ValidationRule>