force-app/main/default/objects/Relationship__c/validationRules/Influencer_CVS_Caremark.validationRule-meta.xml
<ValidationRule>
    <fullName>Influencer_CVS_Caremark</fullName>
    <active>true</active>
    <description>We noticed that you selected Caremark TC, Caremark PSM or CVS Health as the Lead Source.  Please select Caremark instead.</description>
    <errorConditionFormula>$Setup.LVGO_Automation_Switch__c.Validations__c &amp;&amp;
( Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.CVS_Health.Account_Long_ID__c
|| Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.Caremark_TC.Account_Long_ID__c
|| Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.Caremark_PSM.Account_Long_ID__c )
&amp;&amp; ISPICKVAL( RelationshipType__c , &quot;	Influencer&quot;)</errorConditionFormula>
    <errorMessage>We noticed that you selected Caremark TC, Caremark PSM or CVS Health as the Lead Source.  Please select Caremark instead.</errorMessage>
</ValidationRule>