force-app/main/default/objects/Relationship__c/validationRules/PBM_Caremark_TC_PSM.validationRule-meta.xml
<ValidationRule>
    <fullName>PBM_Caremark_TC_PSM</fullName>
    <active>true</active>
    <description>We noticed that you selected Caremark TC or Caremark PSM as the PBM. They represent the Billing Partner and Contract Path only. Please select Caremark instead.</description>
    <errorConditionFormula>$Setup.LVGO_Automation_Switch__c.Validations__c &amp;&amp;
(Partner_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.Caremark_TC.Account_Long_ID__c 
	||  Partner_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.Caremark_PSM.Account_Long_ID__c )
	&amp;&amp; ISPICKVAL( RelationshipType__c , &quot;Pharmacy Benefit Manager&quot;)</errorConditionFormula>
    <errorMessage>We noticed that you selected Caremark TC or Caremark PSM as the PBM. They represent the Billing Partner and Contract Path only. Please select Caremark instead.</errorMessage>
</ValidationRule>